/*
 *  Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
 *
 *  Copyright 2012-2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 *  Modifications copyright (C) 2017 Uber Technologies, Inc.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License"). You may not
 *  use this file except in compliance with the License. A copy of the License is
 *  located at
 *
 *  http://aws.amazon.com/apache2.0
 *
 *  or in the "license" file accompanying this file. This file is distributed on
 *  an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
 *  express or implied. See the License for the specific language governing
 *  permissions and limitations under the License.
 */

package io.temporal.internal.csm;

import io.temporal.api.command.v1.Command;
import io.temporal.api.command.v1.SignalExternalWorkflowExecutionCommandAttributes;
import io.temporal.api.enums.v1.CommandType;
import io.temporal.api.enums.v1.EventType;
import io.temporal.api.history.v1.HistoryEvent;
import io.temporal.workflow.Functions;

public final class SignalExternalStateMachine
    extends EntityStateMachine<
        SignalExternalStateMachine.State,
        SignalExternalStateMachine.Action,
        SignalExternalStateMachine> {

  private final SignalExternalWorkflowExecutionCommandAttributes signalAttributes;

  private final Functions.Proc2<HistoryEvent, Boolean> completionCallback;

  /**
   * Register new instance of the signal commands
   *
   * @param signalAttributes attributes used to signal an external workflow
   * @param completionCallback either SignalExternalWorkflowExecutionFailed,
   *     ExternalWorkflowExecutionSignaled or true value of the second parameter to indicate
   *     immediate cancellation.
   * @param commandSink sink to send commands
   * @return cancellation handler
   */
  public static Functions.Proc newInstance(
      SignalExternalWorkflowExecutionCommandAttributes signalAttributes,
      Functions.Proc2<HistoryEvent, Boolean> completionCallback,
      Functions.Proc1<NewCommand> commandSink) {
    SignalExternalStateMachine commands =
        new SignalExternalStateMachine(signalAttributes, completionCallback, commandSink);
    return commands::cancel;
  }

  private SignalExternalStateMachine(
      SignalExternalWorkflowExecutionCommandAttributes signalAttributes,
      Functions.Proc2<HistoryEvent, Boolean> completionCallback,
      Functions.Proc1<NewCommand> commandSink) {
    super(newStateMachine(), commandSink);
    this.signalAttributes = signalAttributes;
    this.completionCallback = completionCallback;
    action(Action.SCHEDULE);
  }

  enum Action {
    SCHEDULE,
    CANCEL
  }

  enum State {
    CREATED,
    SIGNAL_EXTERNAL_COMMAND_CREATED,
    SIGNAL_EXTERNAL_COMMAND_RECORDED,
    SIGNALED,
    FAILED,
    CANCELED,
  }

  private static StateMachine<State, Action, SignalExternalStateMachine> newStateMachine() {
    return StateMachine.<State, Action, SignalExternalStateMachine>newInstance(
            "SignalExternal", State.CREATED, State.SIGNALED, State.FAILED, State.CANCELED)
        .add(
            State.CREATED,
            Action.SCHEDULE,
            State.SIGNAL_EXTERNAL_COMMAND_CREATED,
            SignalExternalStateMachine::createSignalExternalCommand)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_CREATED,
            Action.CANCEL,
            State.CANCELED,
            SignalExternalStateMachine::cancelSignalExternalCommand)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_CREATED,
            CommandType.COMMAND_TYPE_SIGNAL_EXTERNAL_WORKFLOW_EXECUTION,
            State.SIGNAL_EXTERNAL_COMMAND_CREATED)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_CREATED,
            EventType.EVENT_TYPE_SIGNAL_EXTERNAL_WORKFLOW_EXECUTION_INITIATED,
            State.SIGNAL_EXTERNAL_COMMAND_RECORDED)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_RECORDED,
            EventType.EVENT_TYPE_EXTERNAL_WORKFLOW_EXECUTION_SIGNALED,
            State.SIGNALED,
            SignalExternalStateMachine::notifyCompletion)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_RECORDED,
            Action.CANCEL,
            State.SIGNAL_EXTERNAL_COMMAND_RECORDED)
        .add(
            State.SIGNAL_EXTERNAL_COMMAND_RECORDED,
            EventType.EVENT_TYPE_SIGNAL_EXTERNAL_WORKFLOW_EXECUTION_FAILED,
            State.FAILED,
            SignalExternalStateMachine::notifyCompletion);
  }

  private void createSignalExternalCommand() {
    addCommand(
        Command.newBuilder()
            .setCommandType(CommandType.COMMAND_TYPE_SIGNAL_EXTERNAL_WORKFLOW_EXECUTION)
            .setSignalExternalWorkflowExecutionCommandAttributes(signalAttributes)
            .build());
  }

  public void cancel() {
    action(Action.CANCEL);
  }

  private void notifyCompletion() {
    completionCallback.apply(currentEvent, false);
  }

  private void cancelSignalExternalCommand() {
    cancelInitialCommand();
    completionCallback.apply(null, true);
  }

  public static String asPlantUMLStateDiagram() {
    return newStateMachine().asPlantUMLStateDiagram();
  }
}
